export const snapshot = {};

snapshot[`command: help command with line break 1`] = `
stdout:
'
Usage:   COMMAND --required [val:string] --all <val:string>
Version: 1.0.0                                             

Description:

  Test description ...

Options:

  -h, --help                         - Show this help.                                                                 
  -V, --version                      - Show the version number for                                                     
                                       this program.                                                                   
  -t, --test           [val:string]  - test description                                                                
  -D, --default        [val:string]  - I have a default value!         (Default: "test")                               
  --default-func       [val:string]  - I have a default handler!       (Default: "test")                               
  -T, --default-text   [val:string]  - I have a default text!          (Default: "test")                               
  --default-text-func  [val:string]  - I have a default text handler!  (Default: "test")                               
  -r, --required       [val:string]  - I am required!                  (required)                                      
  -d, --depends        [val:string]  - I depend on test!               (Depends: --test)                               
  -c, --conflicts      [val:string]  - I conflict with test!           (Conflicts: --test)                             
  -a, --all            <val:string>  - I have many hints!              (required, Default: "test", Depends: --test,    
                                                                       Conflicts: --depends)                           

Commands:

  help         [command:command]               - Show this help or the help of a sub-command.
  completions                                  - Generate shell completions.                 
  sub-command  <input:string> <output:string>  - sub command description.                    

Environment variables:

  SOME_ENV_VAR           <value:number>  - Description ...                  
  SOME_ENV_VAR_2         <value:string>  - Description 2 ...                
  SOME_REQUIRED_ENV_VAR  <value:string>  - This one is required!  (required)

'
stderr:
""
`;

snapshot[`command: help command with line break but without default options 1`] = `
stdout:
'
Usage:   COMMAND --required [val:string] --all <val:string>
Version: 1.0.0                                             

Description:

  Test description ...

Options:

  -t, --test           [val:string]  - test description                                                                
  -D, --default        [val:string]  - I have a default value!   (Default: "test")                                     
  --default-func       [val:string]  - I have a default          (Default: "test")                                     
                                       handler!                                                                        
  -T, --default-text   [val:string]  - I have a default text!    (Default: "test")                                     
  --default-text-func  [val:string]  - I have a default text     (Default: "test")                                     
                                       handler!                                                                        
  -r, --required       [val:string]  - I am required!            (required)                                            
  -d, --depends        [val:string]  - I depend on test!         (Depends: --test)                                     
  -c, --conflicts      [val:string]  - I conflict with test!     (Conflicts: --test)                                   
  -a, --all            <val:string>  - I have many hints!        (required, Default: "test", Depends: --test,          
                                                                 Conflicts: --depends)                                 

Commands:

  help         [command:command]               - Show this help or the help of a sub-command.
  completions                                  - Generate shell completions.                 
  sub-command  <input:string> <output:string>  - sub command description.                    

Environment variables:

  SOME_ENV_VAR           <value:number>  - Description ...                  
  SOME_ENV_VAR_2         <value:string>  - Description 2 ...                
  SOME_REQUIRED_ENV_VAR  <value:string>  - This one is required!  (required)

'
stderr:
""
`;

snapshot[`[command] should print help for root command > rootCommand 1`] = `
stdout:
"
Usage: child

Description:

  Child command.

Options:

  -h, --help           - Show this help.  
  --beep      [value]  - Beep.            

Commands:

  foo  [bar]  - Foo command.

"
stderr:
""
`;

snapshot[`[command] should print help for root command > fooCommand 1`] = `
stdout:
"
Usage: child foo [bar]

Description:

  Foo command.

Options:

  -h, --help           - Show this help.  
  --Boop      [value]  - Boop.            

"
stderr:
""
`;
